Upsampled conference nodes for classification

--- a/hpge.ipynb
+++ b/hpge.ipynb
@@ -11,7 +11,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P8olBXLTw_EZ",
-        "outputId": "4a7c1b70-fa00-4514-c48e-9dd5c390cceb"
+        "outputId": "84eb97c3-602b-4e42-c536-5d76ea9e2743"
       },
       "execution_count": null,
       "outputs": [
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a_7eA-wjxWD-",
-        "outputId": "c3638cc3-cdfc-49a8-9b85-c074d993961a"
+        "outputId": "42df9d2c-8890-4768-c296-86d73c64c195"
       },
       "execution_count": null,
       "outputs": [
@@ -76,7 +76,7 @@
         "def fetchData():\n",
         "    line = file.readline()\n",
         "    cnt = 0\n",
-        "V\n",
+        "    \n",
         "    while cnt < 10000:\n",
         "        if not line: break\n",
         "        if cnt > 0: line = file.readline()\n",
@@ -139,7 +139,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TEWWDoWIw9PG",
-        "outputId": "b8445274-1004-4ffd-c5a2-538f440c16cc"
+        "outputId": "618507d2-7071-4df3-cee9-2e67fcfb6955"
       },
       "outputs": [
         {
@@ -165,7 +165,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "q2Gp9VsZw9PH",
-        "outputId": "0ef6b87d-7c9b-4def-b840-f7dc5b19ba08"
+        "outputId": "51b24804-c620-43f3-aa82-79e3f9be5a7d"
       },
       "outputs": [
         {
@@ -212,7 +212,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pSqizKq3w9PI",
-        "outputId": "806dc8df-3fc4-48b8-a502-5dc33ef67eb6"
+        "outputId": "9f06dc11-f40d-447d-a504-611788834078"
       },
       "outputs": [
         {
@@ -237,29 +237,29 @@
           "height": 70
         },
         "id": "p7ds2rXnw9PJ",
-        "outputId": "dbad2683-51ef-45c0-99be-fff5ab419360"
+        "outputId": "806bf892-a3f0-40f9-dad8-a6df6525b366"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|█████████▉| 17400/17423 [00:12<00:00, 1353.20it/s]\n",
-            " 95%|█████████▍| 120000/126737 [00:10<00:00, 11464.89it/s]\n"
+            "100%|█████████▉| 17400/17423 [00:11<00:00, 1470.38it/s]\n",
+            " 95%|█████████▍| 120000/126737 [00:10<00:00, 11074.46it/s]\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'1;17423;0;5513,8388,14057,7277,16564;17418;17421,17422;1.0;0.4000000000000001,0.6;1;1;17423;0;7180,9444,2719,13658,13171;17418;17421,17422;1.0;0.4000000000000001,0.6;1;1\\n'"
+              "'1;17423;0;8406,3365,4183,1989,7743;17418;17421,17422,17423;1.0;0.4,0.2,0.4;1;1;17423;0;2883,9521,230,4617,790;17418;17421,17422,17423;1.0;0.4,0.2,0.4;1;1\\n'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 12
         }
       ],
       "source": [
@@ -555,13 +555,13 @@
         "  if node_type_list[i] == 1: one.append(i)\n",
         "  else: zero.append(i)\n",
         "\n",
-        "confs = node_embed[one]\n",
+        "confs = np.repeat(node_embed[one], 35, axis = 0) \n",
         "athrs = node_embed[zero]\n",
         "\n",
         "cy = [1 for _ in range(confs.shape[0])]\n",
         "ay = [0 for _ in range(athrs.shape[0])]\n",
         "\n",
-        "print(confs.shape)\n",
+        "print(confs.shape, type(node_embed[0]))\n",
         "print(athrs.shape)\n",
         "\n",
         "cx_train, cx_valid, cy_train, cy_valid = train_test_split(confs, cy, test_size=0.1,random_state=9)\n",
@@ -579,7 +579,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RvQaCvGGk4NN",
-        "outputId": "4ffffcb7-3a86-4d95-ced7-f725390f6d00"
+        "outputId": "96c32be4-24cf-4462-e471-fac45084da90"
       },
       "execution_count": null,
       "outputs": [
@@ -587,9 +587,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(159, 128)\n",
+            "(5565, 128) <class 'numpy.ndarray'>\n",
             "(17264, 128)\n",
-            "(143, 128) (10358, 128)\n"
+            "(5008, 128) (10358, 128)\n"
           ]
         }
       ]
@@ -602,16 +602,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WY_Kw0RPw9PM",
-        "outputId": "ada38531-00b1-47d4-9d43-1463d57038bb"
+        "outputId": "7fb0b346-0004-4b0f-c412-c62abcf0f3b1"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Macro_F1_score:0.499421463696847\n",
-            "Micro_F1_score:0.9976885293267842\n",
-            "Accuracy:0.9976885293267842\n"
+            "Macro_F1_score:0.7051747701137094\n",
+            "Micro_F1_score:0.8756532225646523\n",
+            "Accuracy:0.8756532225646523\n"
           ]
         }
       ],
